recipe-k8s/deploy-recipe-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-backend
  labels:
    app: recipe
spec:
  selector:
    matchLabels:
      app: recipe
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: recipe
        tier: backend
    spec:
      containers:
      #- image: olivierkkoc/recipe-backend:demo
      - image: blondel/api      
        name: recipe-api
        ports:
        - containerPort: 8080
        - containerPort: 8443        
          name: api-port
