recipe-k8s/deploy-recipe-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe
  labels:
    app: recipe
spec:
  selector:
    matchLabels:
      app: recipe
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: recipe
        tier: frontend
    spec:
      containers:
      #- image: olivierkkoc/recipe-frontend:demo
      - image: blondel/frontend      
        name: recipe-app
        ports:
        - containerPort: 80
          name: app-port
