recipe-k8s/deploy-recipe-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-mysql
  labels:
    app: recipe
spec:
  selector:
    matchLabels:
      app: recipe
      tier: bdd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: recipe
        tier: bdd
    spec:
      containers:
      - image: mysql:8.0
        name: recipe-mysql
        ports:
        - containerPort: 3306
          name: mysql-port
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-pvc
