recipe-k8s/svc-recipe-api.yml
apiVersion: v1
kind: Service
metadata:
  name: recipe-api
  labels:
    app: recipe
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 30443
  selector:
    app: recipe
    tier: backend
  type: NodePort
