recipe-k8s/svc-recipe-app.yml
apiVersion: v1
kind: Service
metadata:
  name: recipe-app
  labels:
    app: recipe
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: recipe
    tier: frontend
  type: NodePort
