recipe-k8s/ingress-recipe-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-multi-ingress
  namespace: recipe-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: recipe-app.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipe-app
            port:
              number: 80

  - host: phpmyadmin.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80

  - host: recipe-api.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipe-api   # Nom du service backend exposant Swagger
            port:
              number: 5173    # Port exposé par recipe-api
